@@ -8,8 +8,7 @@ Standards-Version: 3.5.2
 Package: libuclibc-dev
 Section: devel
 Architecture: any
-Depends: libuclibc0, ${shlibs:Depends}
-Conflicts: libuclibc-dev-i386
+Depends: ${shlibs:Depends}
 Description: A small implementation of the C library
  uClibc is an implementation of the standard C library that is
  much smaller than glibc, which makes it useful for embedded
@@ -32,4 +31,5 @@ Description: A compiler wrapper for uClibc
  This is a small wrapper for gcc, ld, and other toolchain utilities
  to do compilation against uClibc instead of the native libc.
  This package is used for cross compiling.
+
 
