@@ -1,6 +1,7 @@
 libc 0 libuclibc0 (>> 0.9.5-0)
 libm 0 libuclibc0 (>> 0.9.5-0)
-ld-uclibc 0 libuclibc0 (>> 0.9.5-0)
+ld-uClibc 0 libuclibc0 (>> 0.9.5-0)
 libdl 0 libuclibc0 (>> 0.9.5-0)
 libcrypt 0 libuclibc0 (>> 0.9.5-0)
 libutil 0 libuclibc0 (>> 0.9.5-0)
+libresolv 0 libuclibc0 (>> 0.9.5-0)
