@@ -1,6 +1,8 @@
 uclibc (0.9.5-cvs20010702-1) unstable; urgency=low
 
   * Build from CVS
+  * Can create cross-compiling library (but not cross packages)
+  * Closes #104243
 
  -- David Schleef <ds@schleef.org>  Mon,  2 Jul 2001 23:16:20 -0700
 
